--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -92,12 +92,15 @@
             <input type="radio" id="sat" name="experience" class="exp" value="3">
             <label for="sat">Satisfactory</label><br>
             <input type="radio" id="po" name="experience" class="exp" value="2">
-            <label for="sat">Poor</label> <br>
+            <label for="sat">Poor</label><br>
             <input type="radio" id="aw" name="experience" class="exp" value="1">
             <label for="sat">Awful</label><br>
 
-            <label for="suggestions" class="sug">Any Suggestions to improve our services?</label><br>
-            <textarea name="suggestions" cols="50" rows="10"></textarea>
+            <div clas="suggestion">
+                <label for="suggestions" class="sug">Any Suggestions to improve our services?</label><br>
+                <textarea name="suggestions" cols="50" rows="10"></textarea>
+            </div>
+            
             <div class="buttons">
                 <button class="submit" type="submit" id="book"><span>Submit</span></button>
                 <button type="button" id="reset" class="reset">Reset</button>
