--- a/Assignment 4/index.html
+++ b/Assignment 4/index.html
@@ -1,106 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="reset.css" /> -->
-    <link rel="stylesheet" href="app.css" />
-  </head>
-  <body>
-    <div class="formatting">
-      <h1>Formatting Tags</h1>
-      <p><b>Bold</b></p>
-      <p><i>Italic</i></p>
-      <p>I am a <sub>Subscript</sub></p>
-      <p>I am a <sup>Superscript</sup></p>
-      <p>I am an <strong>Important Text</strong></p>
-      <p>I am an <em>Emphasized Text</em></p>
-      <p>I am a <mark>Marked Text</mark></p>
-      <p>I am a <small>Small Text</small></p>
-      <p>I am a <del>Deleted Text</del></p>
-      <p>I am an <ins>Inserted Text</ins></p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Assignment 4</title>
+  <!-- <link rel="stylesheet" href="reset.css" /> -->
+  <link rel="stylesheet" href="app.css" />
+</head>
+
+<body>
+  <div class="formatting">
+    <h1>Formatting Tags</h1>
+    <p><b>Bold</b></p>
+    <p><i>Italic</i></p>
+    <p>I am a <sub>Subscript</sub></p>
+    <p>I am a <sup>Superscript</sup></p>
+    <p>I am an <strong>Important Text</strong></p>
+    <p>I am an <em>Emphasized Text</em></p>
+    <p>I am a <mark>Marked Text</mark></p>
+    <p>I am a <small>Small Text</small></p>
+    <p>I am a <del>Deleted Text</del></p>
+    <p>I am an <ins>Inserted Text</ins></p>
+  </div>
+
+  <div class="image">
+    <h1 class="image-header">Images</h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpDnYnNE0J4XV6QpMpOaTLB5cdWmvJ5iJaKg&usqp=CAU"
+      alt="Vladimir Putin" class="putin" />
+
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpDnYnNE0J4XV6QpMpOaTLB5cdWmvJ5iJaKg&usqp=CAU"
+      alt="Vladimir Putin" class="putin round-image" />
+
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpDnYnNE0J4XV6QpMpOaTLB5cdWmvJ5iJaKg&usqp=CAU"
+      alt="Vladimir Putin" class="putin roundrect-image" />
+    <div class="quote">
+      <b>“Don’t be mad at the mirror if you are ugly.”</b>
+      <blockquote>- Vladimir Putin</blockquote>
     </div>
-
-    <div class="image">
-      <h1 class="image-header">Images</h1>
-      <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpDnYnNE0J4XV6QpMpOaTLB5cdWmvJ5iJaKg&usqp=CAU"
-        alt="Vladimir Putin"
-        class="putin"
-      />
-
-      <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpDnYnNE0J4XV6QpMpOaTLB5cdWmvJ5iJaKg&usqp=CAU"
-        alt="Vladimir Putin"
-        class="putin round-image"
-      />
-
-      <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpDnYnNE0J4XV6QpMpOaTLB5cdWmvJ5iJaKg&usqp=CAU"
-        alt="Vladimir Putin"
-        class="putin roundrect-image"
-      />
-      <div class="quote">
-        <b>“Don’t be mad at the mirror if you are ugly.”</b>
-        <blockquote>- Vladimir Putin</blockquote>
-      </div>
-      <div class="socials">
-        <a href="https://en.wikipedia.org/wiki/Vladimir_Putin" target="_blank"
-          >Wikipedia</a
-        >
-        <a href="https://www.facebook.com/for.vladimir.putin/">Facebook</a>
-      </div>
-      <div class="table">
-        <h2>Awards & Recognitions</h2>
-        <table class="awards">
-          <tbody>
-            <tr>
-              <th>Year</th>
-              <th>Award/Recognition</th>
-              <th>Description</th>
-            </tr>
-            <tr>
-              <td>2007</td>
-              <td>Person of the Year</td>
-              <td>
-                "His final year as Russia's president has been his most
-                successful yet. At home, he secured his political future.
-                Abroad, he expanded his outsize—if not always benign—influence
-                on global affairs."
-              </td>
-            </tr>
-            <tr>
-              <td>December 2007</td>
-              <td>Person of the Year</td>
-              <td>
-                A Russian business-oriented weekly magazine named Putin as its
-                Person of the Year
-              </td>
-            </tr>
-
-            <tr>
-              <td>5 October 2008</td>
-              <td>Vladimir Putin Avenue</td>
-              <td>
-                The central street of, the capital of Russia's Republic of
-                Chechnyawas renamed from the Victory Avenue to the Vladimir
-                Putin Avenue, as ordered by the Chechen President Ramzan
-                Kadyrov.
-              </td>
-            </tr>
-            <tr>
-              <td>February 2011</td>
-              <td>Vladimir Putin Peak</td>
-              <td>
-                The parliament of Kyrgyzstan named a peak in Tian Shan mountains
-                >Vladimir Putin Peak
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="socials">
+      <a href="https://en.wikipedia.org/wiki/Vladimir_Putin" target="_blank">Wikipedia</a>
+      <a href="https://www.facebook.com/for.vladimir.putin/">Facebook</a>
     </div>
-  </body>
+    <div class="table">
+      <h2>Awards & Recognitions</h2>
+      <table class="awards">
+        <tbody>
+          <tr>
+            <th>Year</th>
+            <th>Award/Recognition</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td>2007</td>
+            <td>Person of the Year</td>
+            <td>
+              "His final year as Russia's president has been his most
+              successful yet. At home, he secured his political future.
+              Abroad, he expanded his outsize—if not always benign—influence
+              on global affairs."
+            </td>
+          </tr>
+          <tr>
+            <td>December 2007</td>
+            <td>Person of the Year</td>
+            <td>
+              A Russian business-oriented weekly magazine named Putin as its
+              Person of the Year
+            </td>
+          </tr>
+
+          <tr>
+            <td>5 October 2008</td>
+            <td>Vladimir Putin Avenue</td>
+            <td>
+              The central street of, the capital of Russia's Republic of
+              Chechnyawas renamed from the Victory Avenue to the Vladimir
+              Putin Avenue, as ordered by the Chechen President Ramzan
+              Kadyrov.
+            </td>
+          </tr>
+          <tr>
+            <td>February 2011</td>
+            <td>Vladimir Putin Peak</td>
+            <td>
+              The parliament of Kyrgyzstan named a peak in Tian Shan mountains
+              >Vladimir Putin Peak
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</body>
+
 </html>
