--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
         <section class="jumbotron text-center">
             <div class="container">
                 <h1 class="jumbotron-heading">Assignments</h1>
-                <p class="lead text-muted">Something short and leading about the collection below—its contents, the
-                    creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it
-                    entirely.</p>
+                <p class="lead text-muted">Assignments for Cohort 4 by Vidhya Classes, I am an Engineer Program.</p>
             </div>
         </section>
     </main>
 
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
 </body>
 
 </html>
