--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800'
         rel='stylesheet' type='text/css'>
-    <title>Assignment 3</title>
+    <title>Assignment 2(b)</title>
 </head>
 
 <body>
