--- a/index.html
+++ b/index.html
@@ -13,32 +13,178 @@
 <body>
 
     <header>
-        <div class="navbar navbar-dark bg-dark box-shadow">
-            <div class="container d-flex justify-content-between">
-                <a href="https://github.com/mahesh-gfx">
-                    <img src="1601742596758.jpg" alt="image Mahesh Adhikari" width="45px"> <strong>Mahesh
-                        Adhikari</strong> </a>
-            </div>
-        </div>
+        <nav class="navbar navbar-dark bg-dark box-shadow">
+            <a class="navbar-brand m-0" href="#">
+                <img src="1601742596758.jpg" width="30" height="30"
+                    class="d-inline-block align-top border border-white round-circle" alt="">
+                Mahesh Adhikari
+            </a>
+        </nav>
     </header>
-    <main role="main">
+    <main role="main" class="container-fluid">
         <section class="jumbotron text-center">
             <div class="container">
                 <h1 class="jumbotron-heading">Assignments</h1>
                 <p class="lead text-muted">Assignments for Cohort 4 by Vidhya Classes, I am an Engineer Program.</p>
             </div>
         </section>
+
+        <div id="cards" class="container mx-auto row">
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\1.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 1</h5>
+                        <p class="card-text">Build a HTML page & understand then Implement Local & Session storage in
+                            details.
+                            Try
+                            to implement all crud operations with all data types.</p>
+                        <a href="Assignment 1\index.html" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%201"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\2.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 2(a)</h5>
+                        <p class="card-text">Design an HTML page with all form elements & try to implment proper form
+                            elements &
+                            attributes. You also need to implement reusable CSS for form elements. Feel free to add JS
+                            for
+                            validations & for making them interactive.</p>
+                        <a href="Assignment 2\login\index.html" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%202/login"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\2.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 2(b)</h5>
+                        <p class="card-text">Design an HTML page with all form elements & try to implment proper form
+                            elements &
+                            attributes. You also need to implement reusable CSS for form elements. Feel free to add JS
+                            for
+                            validations & for making them interactive.</p>
+                        <a href="Assignment 2\index.html" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%202"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="cards" class="container mx-auto row">
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\2.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 3</h5>
+                        <p class="card-text">Design & create Draw.io design for Gmail create account flow. You need to
+                            write
+                            an all steps then prepare & design the flow diagram.</p>
+                        <a href="Assignment 3\google_login" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%203"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\2.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 4</h5>
+                        <p class="card-text">Visit w3shool.com to Learn & Practise HTML elements i.e. Basics, Elements,
+                            Attrributes, Heading, Paragraphs, Inline Style properties, Forrmatting, Quotations,
+                            Comments,
+                            Color, Links, Images & Table elements & it's usages. Make sure to read, understand,
+                            implement &
+                            upload examples on GitHub.</p>
+                        <a href="Assignment 4\index.html" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%204"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\2.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 5</h5>
+                        <p class="card-text">Design & create Draw.io design for Gmail create account flow. You need to
+                            write
+                            an all steps then prepare & design the flow diagram.</p>
+                        <a href="Assignment 5\index.html" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%205"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="cards" class="container mx-auto row">
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\2.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 6</h5>
+                        <p class="card-text">Visit w3shool.com to Learn & Practise Iframe element with all attributes.
+                            Make
+                            sure to try and use it's Sandbox attribute. Please update the code in GitHub once you're
+                            done
+                            with the assignment</p>
+                        <a href="Assignment 6\index.html" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%206"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\2.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 7</h5>
+                        <p class="card-text">Learn and practise all of the HTML Meta tags, as well as SVG and canvas,
+                            and be
+                            sure to post your work to github</p>
+                        <a href="Assignment 7\index.html" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%207"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Assets\Images\2.PNG" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 8</h5>
+                        <p class="card-text">Learn and practise type of css implimentation and its precedence, override
+                            vs
+                            global css & pseudo selectors and its behaviour. Make sure to update it on github.</p>
+                        <a href="Assignment 8\index.html" class="btn btn-primary" target="_blank">View Page</a>
+                        <a href="https://github.com/mahesh-gfx/mahesh-gfx.github.io/tree/main/Assignment%208"
+                            class="btn btn-light" target="_blank">View Source</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </main>
 
-    <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-    </div>
+
+
 </body>
 
 </html>
