updated footer in assignment 9 netflix sign up

--- a/Assignment 9/index.html
+++ b/Assignment 9/index.html
@@ -61,8 +61,9 @@
           </div>
         </div>
       </div>
-      <div class="flex w-48 row-reverse">
+      <div class="flex w-48 align-center">
         <img class="img mw-85" src="assets/png/tv.png" alt="">
+        <video src="assets\video\video-tv-in-0819.m4v" id="tv-video" autoplay></video>
       </div>
     </div>
   </div>
@@ -151,10 +152,49 @@
                     src="assets\svg\arrow.svg" alt=""></span></button>
             </div>
           </div>
-
         </div>
 
       </div>
+    </div>
+  </div>
+
+  <div class="footer-wrap flex just-center b-black">
+    <div class="footer-content flex col">
+      <div class="footer-top flex">
+        <span>Questions? Call 000-800-040-1843</span>
+      </div>
+      <div class="footer-text space-between flex">
+        <div class="footer-col flex col">
+          <span>FAQ</span>
+          <span>Investor Relations</span>
+          <span>Privacy</span>
+          <span>Speed test</span>
+        </div>
+        <div class="footer-col flex col">
+          <span>Help Center</span>
+          <span>Job</span>
+          <span>Cookie Preferences</span>
+          <span>Legal Notices</span>
+        </div>
+        <div class="footer-col flex col">
+          <span>Account</span>
+          <span>Ways to Watch</span>
+          <span>Corporate Information</span>
+          <span>Only on Netflix</span>
+        </div>
+        <div class="footer-col flex col">
+          <span>Media Centre</span>
+          <span>Terms of Use</span>
+          <span>Contact Us</span>
+        </div>
+      </div>
+      <div>
+        <select name="language" class=" white b-black" id="lang-footer">
+          <option value="eng">English</option>
+          <option value="eng">Hindi</option>
+        </select>
+      </div>
+      <span id="footer-country">Netflix India</span>
     </div>
   </div>
 </body>
