--- a/Assignment 9/index.html
+++ b/Assignment 9/index.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <div class="story-card-wrap p-70-45 border-bt-8 flex b-black">
+  <div class="story-card-wrap p-70-45 border-bt-8 flex ">
     <div class="story-card-content flex row align-center space-between">
       <div class="story-card-text flex col w-48">
         <div class="story-card">
@@ -61,9 +61,9 @@
           </div>
         </div>
       </div>
-      <div class="flex w-48 align-center">
-        <img class="img mw-85" src="assets/png/tv.png" alt="">
-        <video src="assets\video\video-tv-in-0819.m4v" id="tv-video" autoplay></video>
+      <div class="w-48">
+        <video src="assets\video\video-tv-in-0819.m4v" class="tv-video" autoplay loop></video>
+        <img class="img mw-85" src="assets/png/tv.png" id="tv">
       </div>
     </div>
   </div>
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="flex w-48">
-        <img class="img mw-85" src="assets\jpg\mobile-0819.jpg" alt="">
+        <img class="img mw-85" src="assets\jpg\mobile-0819.jpg">
       </div>
     </div>
   </div>
@@ -93,8 +93,9 @@
           </div>
         </div>
       </div>
-      <div class="flex w-48 row-reverse">
-        <img class="img mw-85" src="assets\png\device-pile-in.png" alt="">
+      <div class="flex= w-48">
+        <video src="assets\video\video-devices-in.m4v" class="tv-video1" autoplay loop> </video>
+        <img class="img mw-85" src="assets\png\device-pile-in.png" id="devices">
       </div>
     </div>
   </div>
@@ -120,26 +121,74 @@
     <div class="faq-text flex col w-100">
       <div class="faq-text">
         <ul class="faq-list white">
-          <li class="faq-list-item "><button class="flex w-100 text-26-400-0 white align-center space-between">What is
+          <li class="faq-list-item "><button
+              class="accordion flex w-100 text-26-400-0 white align-center space-between">What is
               Netflix?
-              <img class="cross" src="assets\svg\cross.svg" alt=""> </button></li>
-          <li class="faq-list-item "><button class="flex w-100 text-26-400-0 white align-center space-between">How much
+            </button>
+            <div class="faq-ans text-26-400-0">Netflix is a streaming service that offers a wide variety of
+              award-winning TV shows,
+              movies, anime, documentaries and more – on thousands of internet-connected devices.
+
+              You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price.
+              There's always something new to discover, and new TV shows and movies are added every week!</div>
+          </li>
+          <li class="faq-list-item "><button
+              class="accordion flex w-100 text-26-400-0 white align-center space-between">How much
               does netflix cost?
-              <img class="cross" src="assets\svg\cross.svg" alt=""> </button></li>
+            </button>
+            <div class="faq-ans text-26-400-0">Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
+              streaming
+              device, all
+              for one fixed monthly fee. Plans range from ₹ 199 to ₹ 799 a month. No extra costs, no contracts.</div>
+          </li>
 
-          <li class="faq-list-item "><button class="flex w-100 text-26-400-0 white align-center space-between">Where can
+          <li class="faq-list-item "><button
+              class="accordion flex w-100 text-26-400-0 white align-center space-between">Where can
               I watch?
-              <img class="cross" src="assets\svg\cross.svg" alt=""> </button></li>
+            </button>
+            <div class="faq-ans text-26-400-0">Watch anywhere, anytime, on an unlimited number of devices. Sign in
+              with
+              your Netflix
+              account to watch instantly on the web at netflix.com from your personal computer or on any
+              internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets,
+              streaming media players and game consoles.
 
-          <li class="faq-list-item "><button class="flex w-100 text-26-400-0 white align-center space-between">How do I
+              You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use downloads to
+              watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</div>
+          </li>
+
+          <li class="faq-list-item "><button
+              class="accordion flex w-100 text-26-400-0 white align-center space-between">How do I
               cancel?
-              <img class="cross" src="assets\svg\cross.svg" alt=""> </button></li>
-          <li class="faq-list-item "><button class="flex w-100 text-26-400-0 white align-center space-between">What can
+            </button>
+            <div class="faq-ans text-26-400-0">Netflix is flexible. There are no annoying contracts and no
+              commitments.
+              You can easily
+              cancel your account online in two clicks. There are no cancellation fees – start or stop your account
+              anytime.</div>
+          </li>
+
+          <li class="faq-list-item "><button
+              class="accordion flex w-100 text-26-400-0 white align-center space-between">What can
               I watch on Netflix?
-              <img class="cross" src="assets\svg\cross.svg" alt=""> </button></li>
-          <li class="faq-list-item "><button class="flex w-100 text-26-400-0 white align-center space-between">Is
+            </button>
+            <div class="faq-ans text-26-400-0">Netflix has an extensive library of feature films, documentaries,
+              TV
+              shows, anime,
+              award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</div>
+          </li>
+
+          <li class="faq-list-item "><button
+              class="accordion flex w-100 text-26-400-0 white align-center space-between">Is
               Netflix good for kids?
-              <img class="cross" src="assets\svg\cross.svg" alt=""> </button></li>
+            </button>
+            <div class="faq-ans text-26-400-0">The Netflix Kids experience is included in your membership to give
+              parents control
+              while kids enjoy family-friendly TV shows and films in their own space.
+
+              Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of
+              content kids can watch and block specific titles you don’t want kids to see.</div>
+          </li>
         </ul>
 
         <div class="email-form flex align-center just-center col">
@@ -197,6 +246,7 @@
       <span id="footer-country">Netflix India</span>
     </div>
   </div>
+  <script src="assets\js\script.js"></script>
 </body>
 
 </html>
