--- a/Assignment 9/index.html
+++ b/Assignment 9/index.html
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <div class="story-card-wrap p-70-45 border-bt-8 flex row-reverse b-black">
+  <div class="story-card-wrap p-70-45 border-bt-8 flex row-reverse">
     <div class="story-card-content flex row-reverse align-center space-between">
       <div class="story-card-text flex col w-48">
         <div class="story-card">
@@ -83,7 +83,7 @@
     </div>
   </div>
 
-  <div class="story-card-wrap p-70-45 border-bt-8 flex b-black">
+  <div class="story-card-wrap p-70-45 border-bt-8 flex">
     <div class="story-card-content flex row align-center space-between">
       <div class="story-card-text flex col w-48">
         <div class="story-card">
